# fortnite-machine

./: README.md  pyproject.toml
conf/base/: catalog.yml
data/01_raw/: jugadoresBajoRendimiento.csv
notebooks/: jugadorBajoRendimientoyBajaAct.csv  jugadoresPocasPartidas.csv  note_fortinaiti (3).ipynb  note_fortinaiti.ipynb
src/fortnite_machine/: __init__.py  __main__.py  settings.py
